; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_mesh_ps.c_ieee80211_mps_set_sta_local_pm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/mac80211/extr_mesh_ps.c_ieee80211_mps_set_sta_local_pm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sta_info = type { i32, i64, %struct.TYPE_2__, %struct.ieee80211_sub_if_data* }
%struct.TYPE_2__ = type { i32 }
%struct.ieee80211_sub_if_data = type { i32 }

@.str = private unnamed_addr constant [40 x i8] c"local STA operates in mode %d with %pM\0A\00", align 1
@NL80211_PLINK_ESTAB = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ieee80211_mps_set_sta_local_pm(%struct.sta_info* %0, i32 %1) #0 {
  %3 = alloca %struct.sta_info*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ieee80211_sub_if_data*, align 8
  store %struct.sta_info* %0, %struct.sta_info** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.sta_info*, %struct.sta_info** %3, align 8
  %7 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %6, i32 0, i32 3
  %8 = load %struct.ieee80211_sub_if_data*, %struct.ieee80211_sub_if_data** %7, align 8
  store %struct.ieee80211_sub_if_data* %8, %struct.ieee80211_sub_if_data** %5, align 8
  %9 = load %struct.ieee80211_sub_if_data*, %struct.ieee80211_sub_if_data** %5, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.sta_info*, %struct.sta_info** %3, align 8
  %12 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %11, i32 0, i32 2
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = call i32 @mps_dbg(%struct.ieee80211_sub_if_data* %9, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0), i32 %10, i32 %14)
  %16 = load i32, i32* %4, align 4
  %17 = load %struct.sta_info*, %struct.sta_info** %3, align 8
  %18 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 8
  %19 = load %struct.sta_info*, %struct.sta_info** %3, align 8
  %20 = getelementptr inbounds %struct.sta_info, %struct.sta_info* %19, i32 0, i32 1
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @NL80211_PLINK_ESTAB, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %2
  %25 = load %struct.sta_info*, %struct.sta_info** %3, align 8
  %26 = call i32 @mps_qos_null_tx(%struct.sta_info* %25)
  br label %27

27:                                               ; preds = %24, %2
  %28 = load %struct.ieee80211_sub_if_data*, %struct.ieee80211_sub_if_data** %5, align 8
  %29 = call i32 @ieee80211_mps_local_status_update(%struct.ieee80211_sub_if_data* %28)
  ret i32 %29
}

declare dso_local i32 @mps_dbg(%struct.ieee80211_sub_if_data*, i8*, i32, i32) #1

declare dso_local i32 @mps_qos_null_tx(%struct.sta_info*) #1

declare dso_local i32 @ieee80211_mps_local_status_update(%struct.ieee80211_sub_if_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
